# yew-dev-viewer

./: .gitignore  Cargo.toml  rustfmt.toml
src/: device.rs  device_modal.rs  devices.rs  lib.rs  main.rs
static/: index.html
