[package]
name = "yew_dev_viewer"
version = "0.1.0"
authors = ["VersBinarii <versbinarii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stdweb = "0.4.18"
failure = "0.1"
serde = "1"
serde_derive = "1"
uuid = { version = "0.7", features = ["serde", "v4", "stdweb"] }
yew = "0.9.0"

[[bin]]
name = "yew_dev_viewer"
path = "src/main.rs"

[lib]
name = "yew_dev_viewer"
path = "src/lib.rs"